web-client/src/main/resources/apps/css/gnmetadatadefault.css
.metadata a {
  font-weight : bold;
}

/* Specific elements */
.title {
  font-size : 120%;
  font-weight : bold;
  padding-bottom : 5px;
  padding-top : 15px;
}

.x-tool-newwindow {
  background-image : url(../images/default/newwindow.png) !important;
}

.metadata * img.logo {
  max-height : 100px;
  max-width : 100px;
  border : 1px solid #B3D4E6;
  margin : 5px;
}

.mandatory * {
  /*color : red !important;*/
  font-weight : bold;
}

img.thumb-small {
  max-width : 80px;
  max-height : 80px;
  min-height : 40px;
}

span.success {
  padding-left : 15px !important;
  background-repeat : no-repeat;
  background-image : url(../images/default/flag_green.png);
}
span.error {
  padding-left : 15px !important;
  background-repeat : no-repeat;
  background-image : url(../images/default/flag_red.png);
}
.mandatory + td span input,
.mandatory + td span textarea,
.mandatory + td span select {
  /*border-color : red !important;*/
  border : 2px solid #767676;
}


.metadata * div.info {
  width : 100%;
  text-align : center;
  font-style : italic;
  font-size : 80%;
}

/* Help & suggestion */
li.suggestion,
div.help {
  padding : 5px;
  border-bottom : 1px solid #7EADD9;
}

li.thumbnail {
  padding : 5px;
  width : 100px;
  text-align : center;
  float : left;
}

li.thumbnail-over,
li.suggestion-over {
  background-color : #F7EEE1;
}
li.thumbnail-selected,
li.suggestion-selected {
  background-color : #7EADD9;
}
/* Tab navigation - start */
div#tabs ul li ul {
  list-style-type : none;
  padding-bottom : 25px;
  border-bottom : 2px solid #7EADD9;
  margin : 0;
}
div#tabs ul li span.mode {
  display : none;
}

div#tabs ul li ul li {
  float : left;
  height : 21px;
  background-color : #F7EEE1;
  margin : 2px 2px 0 2px;
  border : 2px solid #7EADD9;
}
div#tabs ul li ul li.active {
  padding-top : 2px;
  border-bottom : 2px solid #fff;
  background-color : #fff;
}
#tabs a {
  float : left;
  display : block;
  color : #666;
  text-decoration : none;
  padding : 4px;
}
#tabs a:hover {
  background : #fff;
}
/* Tab navigation - end */



/* Layout view/edit */
.metadata * div.el {
  width : 100%;
  clear : both;
}
.metadata * div.el label {
  margin-right: 5px;
}
.metadata * label {
  color : #767676;
  float : left;
}
/*
label + span {
  clear: right;
  float:left;
}
*/
.metadata * fieldset {
  border-top : 1px solid #8c8c8c;
  border-bottom : none;
  border-left : none;
  border-right : none;
  padding : 0px;
  margin : 0px;
}

.metadata * legend {
  font-size : 110%;
  font-weight : bold;
  color : #016599;
  padding : 5px 0px 4px 0px;
}




/* Form - start */


.metadata * input,
.metadata * textarea,
.metadata * select {
  color : #353a3b;
  border-color : #C1C1C1;
  border : 1px solid #7EADD9;
  padding : 1px 3px;
}

.metadata * select {
  max-width : 200px
}

.metadata * input.error,
.metadata * textarea.error,
.metadata * select.error {
  border : 2px solid red;
}

.metadata * input,
.metadata * textarea {
  width : 60%;
}

.metadata * input.small {
  width : 10%;
}

.metadata * input[type = checkbox] {
  width : 20px;
}


.metadata * input:focus,
.metadata * textarea:focus,
.metadata * select:focus
{
  color : #000;
  background-color : #F7EEE1;
}

.metadata * textarea {
  resize : both;
}
.metadata * textarea.small {
  height : 60px;
}
.metadata * textarea.medium {
  height : 140px;
}
.metadata * textarea.large {
  height : 240px;
}
.metadata * textarea.xml {
  width : 100% !important;
  min-height : 700px; /* FIXME : Auto height*/
  height : 100% !important;
}

/* Form - end */






/* Table - start */

.metadata * table.gn {
  border-collapse : collapse;
  background-color : #fff;
  clear : both;
  padding : 0px;
  margin : 0px;
  width : 100%;
}
.metadata * table.gn > tbody > tr {

}
.metadata * table.gn > tbody > tr > td,
.metadata * table.gn > tbody > tr > th {
  padding : 7px 0px 7px 7px;
  vertical-align : top;
  text-align : left;
}
.metadata * table.gn > tbody > tr > td.col {
  padding : 0px;
  width: 50%;
}

.metadata * table.gn > tbody > tr > td.main,
.metadata * table.gn > tbody > tr > th.main {
  width : 25%;
}

.metadata * table.gn p {
    margin-bottom: 5px;
}

table.related {
  border-collapse: collapse;
  border-spacing: 0px;
  width: 100%;
}
table.related > tbody > tr {
  height : 30px;
}
table.related > tbody > tr > td {
  color : #069;
  border-top : 1px solid #D9AF71;
  border-bottom : 1px solid #D9AF71;
}
table.related > tbody > tr > td.main {
  background-color : #F7EEE1;
}
table.related * ul {
  list-style-type: circle;
  padding: 5px;
  padding-left: 15px;
}


table.gn {
  /*border : 1px solid #B3D4E6;*/
}
table.gn > tbody > tr > td,
table.gn > tbody > tr > th {
  border-bottom : 1px solid #B3D4E6;
  color : #069;
}

table.gn > tbody > tr > th.complex,
table.gn > tbody > tr > td.complex {
  border : none;
}

table.gn > tbody > tr > td.main,
table.gn > tbody > tr > th.main {
  background-color : #EBF5FA;
}

table.map > tbody > tr > td {
  text-align : center;
}
table.map > tbody > tr > td > input,
table.map > tbody > tr > td > label {
  width : 80px !important;
}

/* Table - end */





/* Icon and button - start */
span.icon {
  padding-left : 20px;
  background-repeat : no-repeat;
}

span.buttons {
  background-color : inherit;
  text-align : left;
  vertical-align : middle;
}
span.buttons a {
  border-width : 0px !important;
  cursor : hand;
  cursor : pointer;
}
span.buttons a.small span {
  margin : 1px;
  padding : 0px 4px;
  width : 6px !important;
  height : 5px !important;
  background-repeat : no-repeat;
}
.buttons a.find span {
  padding-left : 15px !important;
  background-image : url(../images/default/find.png);
}
.buttons a.findsub span {
  padding-left : 15px !important;
  background-image : url(../images/default/find.png);
}
.buttons a.error span {
  padding-left : 15px !important;
  background-image : url(../images/default/flag_red.png);
}
.buttons a.add span {
  background-image : url(../images/default/bullet_toggle_plus.png);
}
.buttons a.del span {
  background-image : url(../images/default/bullet_toggle_minus.png);
}
.buttons a.up span {
  background-image : url(../images/default/bullet_arrow_up.png);
}
.buttons a.down span {
  background-image : url(../images/default/bullet_arrow_down.png);
}

div.button {
  float : left;
  background-repeat : no-repeat;
  width : 15px;
  height : 15px;
}

.tgRight {
  background-image : url(../images/default/bullet_arrow_right.png);
}
.tgDown {
  background-image : url(../images/default/bullet_arrow_down.png);
}
.edit {
  background-image : url(../images/default/page_white.png) !important;
}
.editing {
  background-image : url(../images/default/page_white_edit.png) !important;
}
.saveMetadata {
  background-image : url(../images/default/page_save.png) !important;
}
.quitMetadata {
  background-image : url(../images/default/page_go.png) !important;
}
.validateMetadata {
  background-image : url(../images/default/page_lightning.png) !important;
}
.refreshMetadata {
  background-image : url(../images/default/page_refresh.png) !important;
}
.cancel {
  background-image : url(../images/default/cancel.png) !important;
}
.groupKey {
  background-image : url(../images/default/group_key.png) !important;
}
.flagGreen {
  background-image : url(../images/default/flag_green.png) !important;
}
.flagOrange {
  background-image : url(../images/default/flag_orange.png) !important;
}
.flagRed {
  background-image : url(../images/default/flag_red.png) !important;
}
.valid-1 {
  background-image : url(../images/default/flag_green.png) !important;
}
.valid-0 {
  background-image : url(../images/default/flag_red.png) !important;
}
.valid--1 {
}
.book {
  background-image : url(../images/default/book.png) !important;
}
.subtemplateIcon {
  background-image : url(../images/default/report_magnify.png) !important;
}
.thumbnailIcon {
  background-image : url(../images/default/picture.png) !important;
}
.thumbnailAddIcon {
  background-image : url(../images/default/picture_add.png) !important;
}
.thumbnailDelIcon {
  background-image : url(../images/default/picture_delete.png) !important;
}
.thumbnailGoIcon {
  background-image : url(../images/default/picture_go.png) !important;
}
.attached {
  background-image : url(../images/default/folder_brick.png) !important;
}
.attachedAdd {
  background-image : url(../images/default/folder_go.png) !important;
}
.uploadIconAdd {
  background-image : url(../images/default/folder_page_white.png) !important;
}
.uploadIcon {
  background-image : url(../images/default/folder_go.png) !important;
}
.suggestionIcon {
  background-image : url(../images/default/cog.png) !important;
}
.suggestionRunIcon {
  background-image : url(../images/default/page_gear.png) !important;
}
.relatedAddIcon {
  background-image : url(../images/default/link_add.png) !important;
}
.relatedDelIcon {
  background-image : url(../images/default/link_del.png) !important;
}
.lightBox {
  background-image : url(../images/default/map/icon_zoomin.png) !important;
}
.cat-applications {
  background-image : url(../images/default/category/applications.png) !important;
}
.cat-dataset {
  background-image : url(../images/default/category/dataset.png) !important;
}
.cat-datasets {
  background-image : url(../images/default/category/datasets.png) !important;
}
.cat-services, .cat-service {
  background-image : url(../images/default/category/service.png) !important;
}
.cat-maps {
  background-image : url(../images/default/category/maps.png) !important;
}
.cat-audioVideo {
  background-image : url(../images/default/category/audioVideo.png) !important;
}
.cat-caseStudies {
  background-image : url(../images/default/category/caseStudies.png) !important;
}
.cat-directories {
  background-image : url(../images/default/category/directories.png) !important;
}
.cat-related, .cat-featureCatalogue {
  background-image : url(../images/default/category/featureCatalogue.png) !important;
}
.cat-interactiveResources {
  background-image : url(../images/default/category/interactiveResources.png) !important;
}
.cat-model {
  background-image : url(../images/default/category/model.png) !important;
}
.cat-photo {
  background-image : url(../images/default/category/photo.png) !important;
}
.cat-otherResources {
  background-image : url(../images/default/category/otherResources.png) !important;
}
.cat-proceedings {
  background-image : url(../images/default/category/proceedings.png) !important;
}
/* Icon and button - end */




/* Codelist have a class attribute which could
be use for custom styling in view mode */
.topSecret *, .confidential *, .restricted *, .secret * {
    color: #ff0a0f !important;
}

